Opened 4 years ago

Closed 3 months ago

#16505 closed bug (fixed)

BPoint::PrintToStream() should print a float with decimal places, not tructated to int (easy)

Reported by: smallstepforman Owned by: nobody
Priority: normal Milestone: R1/beta6
Component: Kits/Interface Kit Version: R1/beta2
Keywords: BPoint Cc:
Blocked By: Blocking:
Platform: All

Description

The BPoint members are floats, so it makes sense to print floats with decimal points instead of truncating the remainder and dislaying it as an integer. The Interface kit works natively in floats, so it makes sense to print debug out in floats. As a developer, I end up ignoring the built in API and interogate the members manually to display properly.

Change History (6)

comment:1 by pulkomandy, 13 months ago

Summary: BPoint::PrintToStream() should print a float with decimal places, not tructated to intBPoint::PrintToStream() should print a float with decimal places, not tructated to int (easy)

comment:2 by zhaom, 4 months ago

Hi may I try to work with this ticket?

comment:3 by korli, 4 months ago

There is already some work done here: https://review.haiku-os.org/c/haiku/+/7565

comment:4 by pulkomandy, 4 months ago

You are welcome to take the existing patch and rework it as discussed in the code review comment, or replace it with a better version (in that case, please reuse the same Change-Id if possible).

comment:6 by waddlesplash, 3 months ago

Milestone: UnscheduledR1/beta6
Resolution: fixed
Status: newclosed

Fix merged in hrev58279.

Note: See TracTickets for help on using tickets.