Kits/Interface Kit: Updated BPoint::PrintToStream() to print a float with decimal places

Fixes: #16505
Change-Id: Ifd9845fe53f2c9eabd6b2df1ea8a77ed0676a15f